ハンズオンのStep1（getUserMediaの使用）を実装

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <h1>WebRTC Samples</h1>
         <div>こんにちは WebRTC</div>
-        <div><a href="./samples/hello.html">hello</a></div>
+        <div><a href="./handson/index.html">handson</a></div>
     </body>
 </html>
